--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -2,7 +2,21 @@
 <h1>New ?</h1>
   <div>
     <form>
-      <div>
+      <div class="form-group">
+        <label for="author">Author</label>
+        {{input value=author id="author" class="form-control"}}
       </div>
+      <div class="form-group">
+        <label for="query">What's your question?</label>
+        {{input value=question id="question" class="form-control"}}
+      </div>
+      <div class="form-group">
+        <label for="note">Any additional info you want to add?</label>
+        {{input value=note id="note" class="form-control"}}
+      </div>
+      <button {{action "saveQuestion"}} class="btn btn-success">Save</button>
     </form>
   </div>
+  {{else}}
+    <button {{action "newFormShow"}} class="btn btn-success">New Question</button>
+  {{/if}}
