--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -8,7 +8,7 @@
       </div>
       <div class="form-group">
         <label for="query">What's your question?</label>
-        {{input value=question id="question" class="form-control"}}
+        {{input value=query id="query" class="form-control"}}
       </div>
       <div class="form-group">
         <label for="note">Any additional info you want to add?</label>
