--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,6 +1,6 @@
 <div>
   <p>{{question.author}} | {{question.query}}</p>
-  {{update-question question="question" update="update"}}
+  {{update-question question=question update="update"}}
   <button{{action 'delete' question}}>Delete</button>
   <hr>
 </div>
