add individual question pages clickable from the question-tile

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,5 +1,7 @@
 <div>
-  <p>{{question.author}} | {{question.query}}</p>
+  {{#link-to 'question' question.id}}
+    <p>{{question.author}} | {{question.query}}</p>
+  {{/link-to}}
   {{update-question question=question update="update"}}
   <button{{action 'delete' question}}>Delete</button>
   <hr>
