start work on adding answerfunctionality, addding and displaying them

--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -1,5 +1,11 @@
 <h1>{{question.author}} | {{question.query}}</h1>
 <p>{{question.note}}</p>
+<h3>Answers</h3>
+<p>
+{{#each question.answers as |answer|}}
+  {{answer-tile answer=answer}}
+{{/each}}
+</p>
 <hr>
 <button class="btn btn-warning" {{action "delete" question}}>Delete Question</button>
 {{update-question question=question update="update"}}
