--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -3,6 +3,6 @@
     <p>{{question.author}} | {{question.query}}</p>
   {{/link-to}}
   {{update-question question=question update="update"}}
-  <button{{action 'delete' question}}>Delete</button>
+  <button class="btn btn-warning"{{action 'delete' question}}>Delete</button>
   <hr>
 </div>
