--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,4 +1,4 @@
 <div class="singleQuestion container">
   {{question-detail question=model deleteQuestion="deleteQuestion" update="update"}}
-  {{new-answer saveAswer="saveAnswer" question=model}}
+  {{new-answer saveAnswer="saveAnswer" question=model}}
 </div>
