add bug fixes so adding answer works now, more styling

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,11 +2,12 @@
   <div class="container">
     <a href="/">
       <div class="navbar-header">
-        <a class="navbar-name"> </a>
+        <a class="navbar-name"> Questions+Answers </a>
       </div>
     </a>
   </div>
 </nav>
-<div class="jumbotron" id="mainpage">
+<hr>
+<div class="well" id="mainpage">
   {{outlet}}
 </div>
