--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -1,6 +1,6 @@
 <h1>{{question.author}} | {{question.query}}</h1>
 <p>{{question.note}}</p>
-<h3>Answers</h3>
+<h3>Answers:</h3>
 <p>
 {{#each question.answers as |answer|}}
   {{answer-tile answer=answer}}
