--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -2,7 +2,7 @@
   {{#link-to 'question' question.id}}
     <p>{{question.author}} | {{question.query}}</p>
   {{/link-to}}
-  {{update-question question=question update="update"}}
+  {{count}}{{update-question question=question update="update"}}
   <button class="btn btn-warning"{{action 'delete' question}}>Delete</button>
   <hr>
 </div>
