add service function start styling

--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,3 +1,4 @@
 <div>
   {{answer.username}} | {{answer.content}}
+  <button class="btn btn-success" {{action 'addToBestAnswers' answer}}>Add to favorite answers!</button>
 </div>
