--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -9,3 +9,6 @@
 <hr>
 <button class="btn btn-warning" {{action "delete" question}}>Delete Question</button>
 {{update-question question=question update="update"}}
+
+<h1>Favorite Answers:</h1>
+{{display-favs answer=answer}}
