add service functionality such that a favorite answer could be removed from the favorite answers list

--- a/app/templates/components/display-favs.hbs
+++ b/app/templates/components/display-favs.hbs
@@ -1,4 +1,5 @@
 {{#each favoriteAnswers.items as |item|}}
   {{item.username}} | {{item.content}}
+  <button class="btn btn-danger" {{action 'removeFromBestAnswers' item}}>remove from list</button>
   <hr>
 {{/each}}
